@@ -58,7 +58,7 @@
       <email>akarasulu@apache.org</email>
       <organization></organization>
       <roles>
-        <role></role>
+        <role>Mentor</role>
       </roles>
       <timezone></timezone>
     </developer>
@@ -68,7 +68,7 @@
       <email>chris.a.mattmann@jpl.nasa.gov</email>
       <organization>NASA JPL</organization>
       <roles>
-        <role></role>
+        <role>Mentor</role>
       </roles>
       <timezone>-8</timezone>
     </developer>
@@ -78,7 +78,7 @@
       <email>ereisman@apache.org</email>
       <organization>Hortonworks</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>-8</timezone>
     </developer>
@@ -88,7 +88,7 @@
       <email>hsaputra@apache.org</email>
       <organization>Platfora</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>-8</timezone>
     </developer>
@@ -98,7 +98,7 @@
       <email>hyunsik@apache.org</email>
       <organization>Gruter</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>+9</timezone>
     </developer>
@@ -108,7 +108,7 @@
       <email>blrunner@apache.org</email>
       <organization>Gruter</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>+9</timezone>
     </developer>
@@ -118,7 +118,7 @@
       <email>jghoman@apache.org</email>
       <organization>LinkedIn</organization>
       <roles>
-        <role></role>
+        <role>Champion</role>
       </roles>
       <timezone>-8</timezone>
     </developer>
@@ -128,7 +128,7 @@
       <email>jhkim@apache.org</email>
       <organization>Gruter</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>+9</timezone>
     </developer>
@@ -138,7 +138,7 @@
       <email>jihoonson@apache.org</email>
       <organization>Korea University</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>+9</timezone>
     </developer>
@@ -148,7 +148,7 @@
       <email>owen@hortonworks.com</email>
       <organization>Hortonworks</organization>
       <roles>
-        <role></role>
+        <role>Mentor</role>
       </roles>
       <timezone>-8</timezone>
     </developer>
@@ -158,7 +158,7 @@
       <email>rsumbaly@apache.org</email>
       <organization>LinkedIn</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>-8</timezone>
     </developer>
@@ -168,7 +168,7 @@
       <email>swkim@apache.org</email>
       <organization>Inervit</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>+9</timezone>
     </developer>
@@ -178,11 +178,32 @@
       <email>yliu@apache.org</email>
       <organization>Intel</organization>
       <roles>
-        <role></role>
+        <role>PPMC</role>
       </roles>
       <timezone>+8</timezone>
     </developer>
   </developers>
+
+  <contributors>
+    <contributor>
+      <name>Camelia</name>
+    </contributor>
+    <contributor>
+      <name>DaeMyung Kang</name>
+    </contributor>
+    <contributor>
+      <name>Dongmin Yu</name>
+    </contributor>
+    <contributor>
+      <name>Keuntae Park </name>
+    </contributor>
+    <contributor>
+      <name>Hyoung Jun Kim</name>
+    </contributor>
+    <contributor>
+      <name>Sergio Esteves</name>
+    </contributor>
+  </contributors>
 
   <issueManagement>
     <system>Jira</system>
@@ -249,7 +270,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.0</version>
+          <version>1.3</version>
           <configuration>
             <rules>
               <requireMavenVersion>
@@ -279,7 +300,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.0</version>
+          <version>3.3</version>
           <dependencies>
             <dependency><!-- add support for ssh/scp -->
               <groupId>org.apache.maven.wagon</groupId>
@@ -484,7 +505,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.0</version>
+        <version>3.3</version>
         <configuration>
           <skipDeploy>true</skipDeploy>
         </configuration>
