@@ -81,6 +81,7 @@
 
     <menu name="Tajo">
       <item name="Overview" href="index.html" />
+      <item name="Wiki" href="http://wiki.apache.org/tajo" />
       <item name="Team" href="team-list.html" />
       <item name="Mailing Lists" href="mail-lists.html" />
       <item name="License" href="http://www.apache.org/licenses/" />
@@ -89,12 +90,22 @@
       <!-- <item name="FAQ" href="faq.html" /> -->
     </menu>
 
-    <menu name="Documents">
-      <item name="Wiki" href="http://wiki.apache.org/tajo" />
+    <menu name="Users Documentation">
       <item name="Getting Started" href="http://wiki.apache.org/tajo/GettingStarted" />
       <item name="Build Instruction" href="http://wiki.apache.org/tajo/BuildInstruction" />
-      <item name="Query Language" href="http://wiki.apache.org/tajo/QueryLanguage" />
-      <item name="Configuration" href="http://wiki.apache.org/tajo/Configuration" />
+      <item name="Query Language Guide" href="http://wiki.apache.org/tajo/QueryLanguage" />
+      <item name="Configuration Guide" href="http://wiki.apache.org/tajo/Configuration" />
+      <item name="Catalog Manual" href="http://wiki.apache.org/tajo/Catalog" />
+      <item name="Backup and Restore Guide" href="http://wiki.apache.org/tajo/BackupAndRestore" />
+      <item name="Tajo Interactive Shell Manual" href="http://wiki.apache.org/tajo/tsql" />
+      <item name="Functions" href="http://wiki.apache.org/tajo/Functions" />
+    </menu>
+
+    <menu name="Developer Documents">
+      <item name="Get Involved" href="http://www.apache.org/foundation/getinvolved.html" />
+      <item name="How To Contribute" href="http://wiki.apache.org/tajo/HowToContribute" />
+      <item name="Tajo Internal" href="http://wiki.apache.org/tajo/Configuration" />
+      <item name="Coding Style" href="http://wiki.apache.org/tajo/CodingStyle" />
     </menu>
 
     <footer>
